Possible fix for boxed background on inputs on mobile

--- a/otvoreni_akti/apps/search/static/search/main.css
+++ b/otvoreni_akti/apps/search/static/search/main.css
@@ -152,6 +152,7 @@ form {
     background-color: var(--purple-dark-color);
     border-radius: 40px;
     color: #FFFFFF;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .search_metadata > select {
